# osm2odr

./: .dockerignore  .flake8  .gitignore  README.md  dockerfile  makefile  pyproject.toml  requirements.txt
osm2odr/: main.py
osm2odr/api/: __init__.py  conversion.py  files.py
osm2odr/core/: logging.py
osm2odr/data/: __init__.py
osm2odr/schemas/: conversion.py
osm2odr/service/: netconvert.py  overpass.py
osm2odr/utils/: xodr.py
